# MeganeCAN

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  merge-bin.py  notes  partitions_ota.csv  platformio.ini  sdkconfig.defaults
src/: Affa3Constants.h  Affa3Display.cpp  Affa3Display.h  Affa3Error.h  AuxModeTracker.cpp  AuxModeTracker.h  BleMediaKeyboard.h  CMakeLists.txt  CanUtils.cpp  CanUtils.h  DisplayManager.cpp  DisplayManager.h  IDisplay.h  IMenuDisplay.h  SyncStatus.h  affa3.cpp  affa3.h  apple_media_service.cpp  apple_media_service.h  apple_notification_service.cpp  apple_notification_service.h  bluetooth.cpp  bluetooth.h  current_time_service.cpp  current_time_service.h  main.cpp  secrets.h  wifi_manager.cpp
src/ElmManager/: DiagPlanCommon.h  MyELMManager.cpp  MyELMManager.h  PidPlan_743.h  PidPlan_744.h  PidPlan_745.h  PidPlan_74D.h  PidPlan_7E0 copy 2.h  PidPlan_7E0.h  name,ShortName,ModeAndPID,Equation,Min V.ini
src/affa/: IsoTp.cpp  IsoTp.h  ScreenDecode.cpp  ScreenDecode.h  ScreenModel.h
src/app/: AppContext.cpp  AppContext.h  BoardDiagnostics.cpp  BoardDiagnostics.h  SerialConsole.cpp  SerialConsole.h
src/bluetooth/: A2dpManager.cpp  A2dpManager.h  TrackInfo.h
src/bus/: ArduinoClock.h  BusTap.h  Frame.h  HwCanBus.cpp  HwCanBus.h  ICanBus.h  IClock.h  ITxGate.h  LoopbackCanBus.h  SerialMirrorTap.h
src/commands/: DisplayCommands.cpp  DisplayCommands.h
src/connectivity/: ElmWifiManager.cpp  ElmWifiManager.h
src/console/: SerialConsole.cpp  SerialConsole.h  WireConsole.cpp  WireConsole.h
src/core/: EventBus.cpp  EventBus.h  (+1 more)
(+155 files in other folders)
